--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -37,6 +37,23 @@
       <artifactId>mysql-connector-java</artifactId>
     <version>8.0.26</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
+
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>taglibs</groupId>
+        <artifactId>standard</artifactId>
+        <version>1.1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
